--- a/requirements.txt
+++ b/requirements.txt
@@ -5,15 +5,18 @@ beautifulsoup4==4.9.3
 boddle==0.2.9
 bottle==0.12.19
 bottle-extras==0.1.0
+certifi==2020.12.5
 chardet==3.0.4
 discord==1.0.1
 discord.py==1.6.0
-idna==3.1
+idna==2.10
 multidict==5.1.0
 nose==1.3.7
+requests==2.25.1
 six==1.15.0
 soupsieve==2.1
 typing-extensions==3.7.4.3
+urllib3==1.26.3
 waitress==1.4.4
 WebOb==1.8.6
 WebTest==2.0.35
